--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 purpose: 'Distribute funds',
                 recipients: [{
                     address: '0xcEe6FeBe294D5591ed3ec94EBfcE35067cBA901F',
-                    token: 'USDT',
+                    token: 'USDC',
                     amount: 0.01
                 }]
             })
