--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script>
         window.addEventListener('DOMContentLoaded', function () {
             hq.init({
-                name: 'My project name',
-                url: 'https://myprojectwebsite.co',
-                logoUrl: 'https://myprojectwebsite.co/logo.svg'
+                name: 'My Web Project',
+                url: 'https://mywebproject.com',
+                logoUrl: 'https://mywebproject.com/img/logo.svg'
             })
             hq.multisend({
                 elem: 'multisend',
