--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             hq.init({
                 name: 'My Web Project',
                 url: 'https://mywebproject.com',
-                logoUrl: 'https://mywebproject.com/img/logo.svg',
-                staging: true
+                logoUrl: 'https://mywebproject.com/img/logo.svg'
             })
             hq.multisend({
                 elem: 'multisend',
