Adding react component

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             hq.init({
                 name: 'My Web Project',
                 url: 'https://mywebproject.com',
-                logoUrl: 'https://mywebproject.com/img/logo.svg'
+                logoUrl: 'https://mywebproject.com/img/logo.svg',
+                staging: true
             })
             hq.multisend({
                 elem: 'multisend',
